[package]
name = "nscan"
version = "1.2.0"
authors = ["shellrow <shellrow@fortnium.com>"]
edition = "2021"
description = "Cross-platform network scan tool for host and service discovery"
repository = "https://github.com/shellrow/nscan"
homepage = "https://github.com/shellrow/nscan"
readme = "README.md"
documentation = "https://github.com/shellrow/nscan"
keywords = ["network","security","scan","cli","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
anyhow = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
netdev = { version = "0.34", features = ["serde"] }
nex = { version = "0.19.1", features = ["serde"] }
futures = {version = "0.3", features = ["executor", "thread-pool"]}
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"
tokio = { version = "1" }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"]} 
hickory-resolver = { version = "0.24" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4","v5","fast-rng","macro-diagnostics"] }
bincode = "1.3"
phf = { version = "0.11", features = ["macros"] }
rand = "0.8"
clap = { version = "4.4", features = ["cargo"] }
indicatif = "0.16"
inquire = "0.6"
ipnet = "2.7"
num_cpus = "1.16"
termtree = "0.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
