[package]
name = "nscan"
version = "1.4.0"
authors = ["shellrow <shellrow@foctal.com>"]
edition = "2021"
description = "Cross-platform network scan tool for host and service discovery"
repository = "https://github.com/shellrow/nscan"
homepage = "https://github.com/shellrow/nscan"
readme = "README.md"
documentation = "https://github.com/shellrow/nscan"
keywords = ["network","security","scan","cli","cross-platform"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["time", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
netdev = { version = "0.38", features = ["serde"] }
nex = { version = "0.23", features = ["serde"] }
futures = {version = "0.3", features = ["executor", "thread-pool"]}
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2.1"
rustls-pki-types = "1.8"
x509-parser = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "io-util", "sync"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] } 
hickory-proto = "0.25"
hickory-resolver = { version = "0.25" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4","v5","fast-rng","macro-diagnostics"] }
rand = "0.8"
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = { version = "0.18" }
tracing-indicatif = "0.3"
inquire = "0.6"
ipnet = "2.11"
num_cpus = "1.17"
termtree = "0.5"
ndb-oui = { version = "0.3", features = ["bundled"] }
ndb-tcp-service = { version = "0.3", features = ["bundled"] }
ndb-udp-service = { version = "0.3", features = ["bundled"] }
home = "0.5"
base64 = "0.22"
regex = "1.11"
fastrand = "2.3"
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
